--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,27 +1,136 @@
 {% extends 'base.html' %} 
 
+{% load staticfiles %}
+
 {% block nav-item %}
 <a class="nav-item nav-link" href="{% url 'jobs' %}">Portfolio</a>
 <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
-{% endblock %}
+{% endblock %} 
 
-{% block content %}
-    <div class="container">
-        <h1 class="text-center pt-3">Welcome to Paulo's Blog</h1>
-        <br />
-        <br />
-        <h3>Latest posts</h3>
-        <br /> 
-        {% for blog in allblogs.all%}
-        <a href="{%url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
-        <!-- <h4>{{ blog.pub_date|date:"D, d M Y" }}</h4> !-->
-        <h4>{{ blog.pub_date_pretty}}</h4>
-        <br />
-        <img src="{{ blog.image.url }}" class="img-fluid" height="200" width="200">
-        <br />
-        <br /> 
-        {{ blog.summary }}
-        <hr /> 
-        {% endfor %}
+
+{% block content %} 
+
+<div class="container">
+    
+    <div class="row ">
+        <!-- Blogs resumes -->
+        <div class="col-md-8">
+            {% block news %}<h1 class="text-left pt-3">Welcome to Paulo's Blog</h1> {% endblock %} 
+             <br />
+            <br />
+            <h3>Latest posts</h3>
+            {% for blog in allblogs.all%}
+            <div class="card my-4">
+                    <h5 class="card-header">Search</h5>
+                    <div class="card-body">
+                        <a href="{%url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
+                        <!-- <h4>{{ blog.pub_date|date:"D, d M Y" }}</h4> !-->
+                        <h4>{{ blog.pub_date_pretty}}</h4>
+                        <img src="{{ blog.image.url }}" class="img-fluid" height="200" width="200">
+                        <br />
+                        <br />
+                        {{ blog.summary }}
+                    </div>
+            </div>
+            {% endfor %}
+            <br />
+            <hr /> 
+        </div>
+        
+        {% block widgets %} 
+        <!-- Sidebar Widgets Column -->
+        <div class="col-md-4">
+
+            <!-- Search Widget -->
+            <div class="card my-4">
+                <h5 class="card-header">Search</h5>
+                <div class="card-body">
+                    <div class="input-group">
+                        <input class="form-control" placeholder="Search for..." type="text">
+                        <span class="input-group-btn">
+                            <button class="btn btn-secondary" type="button">Go!</button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Categories Widget -->
+            <div class="card my-4">
+                <h5 class="card-header">Categories</h5>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled mb-0">
+                                <li>
+                                    <a href="#">GIS</a>
+                                </li>
+                                <li>
+                                    <a href="#">R</a>
+                                </li>
+                                <li>
+                                    <a href="#">Python</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled mb-0">
+                                <li>
+                                    <a href="#">Webdesign</a>
+                                </li>
+                                <li>
+                                    <a href="#">Django</a>
+                                </li>
+                                <li>
+                                    <a href="#">Tutorials</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- About me Widget -->
+            <div class="card my-4">
+                <h5 class="card-header text-center">About me</h5>
+                <div class="card-body">
+                        <div class="container-fluid text-center">
+                            <img src="{% static 'me-squared.png' %}" class="rounded-circle" />
+                            
+                            <p class="card-text">Hello, my name is <strong>Paulo Pimenta. </strong> I am a software developpper, currently
+                                living in Montpellier, France. After I finished my Phd, I decided to create this blog to share some of my knowledge about GIS, programming, and reasearch.
+                            </p>
+                     
+                            <br />
+                            <div class="btn-group" style="font-size:20px">
+                                <a class="mr-2" href="#" title="Facebook">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a class="mr-2" href="#" title="Twitter">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a class="mr-2" href="#" title="GitHub">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a class="mr-2" href="#" title="GitHub">
+                                    <i class="fab fa-google"></i>
+                                </a>
+                                <a class="mr-2" href="#" title="GitHub">
+                                    <i class="fab fa-slack"></i>
+                                </a>
+                                <a class="mr-2" href="#" title="GitHub">
+                                    <i class="fas fa-at"></i>
+                                </a>
+                            </div>
+                        </div>
+                </div>
+            </div>
+
+        </div>
+        {% endblock %} 
+
     </div>
+    <!-- /.row -->
+</div>
+<hr> 
+
 {% endblock %}
