--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,12 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'blog/allblogs.html' %}
 <!-- Django does not extend static files and some other stuff-->
 
-{% load staticfiles %} 
-
-{% block meta-title%}<meta property="og:title" content="{{blog.title}}" />{% endblock %}
-{% block meta-description%}<meta property="og:description" content="{{ blog.summary }}" />{% endblock %}
-{% block meta-image%} <meta property="og:image" content="{{blog.image.url}}" /> {% endblock %}
-{% block meta-url%}<meta property="og:url" content="{{ request.build_absolute_uri }}" />{% endblock %}
+{% load staticfiles %} {% block meta-title%}
+<meta property="og:title" content="{{blog.title}}" />{% endblock %} {% block meta-description%}
+<meta property="og:description" content="{{ blog.summary }}" />{% endblock %} {% block meta-image%}
+<meta property="og:image" content="{{blog.image.url}}" /> {% endblock %} {% block meta-url%}
+<meta property="og:url" content="{{ request.build_absolute_uri }}" />{% endblock %}
 
 
 <!-- Schema.org markup for Twitter -->
@@ -19,7 +18,7 @@
 <!-- Schema.org markup for Google+ -->
 <meta itemprop="name" content="{{blog.title}}">
 <meta itemprop="description" content="{{ blog.summary }}">
-<meta itemprop="image" content="{{blog.image.url}}"> 
+<meta itemprop="image" content="{{blog.image.url}}">
 
 <!-- Schema.org markup for Linkedin -->
 
@@ -29,9 +28,9 @@
 <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
 {% endblock %} 
 
-
 {% block content %}
-<div class = "container">
+
+<div class="container">
     <div class="row ">
 
         <!-- Post Content Column -->
@@ -56,117 +55,56 @@
             <hr>
 
             <!-- Social Bar -->
-            <div class="content">
-                <h5 class="text-right" style="float:left">Share this post : </h5>
-                <div class="text-right" style="float:right">
-                    <a class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a>
-                    <a class="btn btn-social-icon btn-google" href="https://plus.google.com/share?url={{ request.build_absolute_uri }}"
-                        onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" 
-                        rel="nofollow" target="_blank" title="Share on Google+">
-                        <span class="fa fa-google"></span>
+            <p>
+                <h6 class="text-left" style="float:left">Share this post : </h6>
+                <div class='button-group' style="float:right">
+                    <a class='icon social fb' href="https://twitter.com/intent/tweet?text={{ blog.title }}&url={{ request.build_absolute_uri }}&related=paulofpimenta&hashtags=ouicodegis">
+                        <i class='fab fa-facebook-f'></i>
                     </a>
-                    <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/sharing/share-offsite/?mini=true&url={{ request.build_absolute_uri }}"
-                        onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
-                        title="Share on LinkedIn">
-                        <span class="fa fa-linkedin"></span>
+                    <a class='icon social tw' href="https://twitter.com/intent/tweet?text={{ blog.title }}&url={{ request.build_absolute_uri }}&related=paulofpimenta&hashtags=ouicodegis">
+                        <i class='fab fa-twitter'></i>
                     </a>
-                    <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/intent/tweet?text={{ blog.title }}&url={{ request.build_absolute_uri }}&related=paulofpimenta&hashtags=ouicodegis"
-                        title="Share on Twitter">
-                        <span class="fa fa-twitter"></span>
+                    <a class='icon social in' href="https://www.linkedin.com/sharing/share-offsite/?mini=true&url={{ request.build_absolute_uri }}"
+                        onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">
+                        <i class='fab fa-linkedin'></i>
+                    </a>
+                    <a class='icon social gp' href="https://www.linkedin.com/sharing/share-offsite/?mini=true&url={{ request.build_absolute_uri }}"
+                        onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">
+                        <i class='fab fa-google-plus-g'></i>
                     </a>
                 </div>
-                <br />
-                <br />
-
-            </div>
+            </p>
+            <br />
+            <br />
         </div>
-        <!-- Sidebar Widgets Column -->
-        <div class="col-md-4">
-
-            <!-- Search Widget -->
-            <div class="card my-4">
-                <h5 class="card-header">Search</h5>
-                <div class="card-body">
-                    <div class="input-group">
-                        <input class="form-control" placeholder="Search for..." type="text">
-                        <span class="input-group-btn">
-                            <button class="btn btn-secondary" type="button">Go!</button>
-                        </span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Categories Widget -->
-            <div class="card my-4">
-                <h5 class="card-header">Categories</h5>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled mb-0">
-                                <li>
-                                    <a href="#">GIS</a>
-                                </li>
-                                <li>
-                                    <a href="#">R</a>
-                                </li>
-                                <li>
-                                    <a href="#">Python</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled mb-0">
-                                <li>
-                                    <a href="#">Webdesign</a>
-                                </li>
-                                <li>
-                                    <a href="#">Django</a>
-                                </li>
-                                <li>
-                                    <a href="#">Tutorials</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Side Widget -->
-            <div class="card my-4">
-                <h5 class="card-header">About me</h5>
-                <div class="card-body">
-                    <p class="text-center">About me</p>
-                    <p>I can add a photo and an info about me, with social media icons on the bottom</p>
-                </div>
-            </div>
-
-        </div>
+        {% block widgets %} {{block.super}} {% endblock %}
+        <!-- /.row -->
     </div>
-    <!-- /.row -->
     <hr>
-
     <div id="disqus_thread"></div>
+    <!-- /.col container -->
 </div>
-    <script>
-
-        /**
-        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-        var disqus_config = function () {
-            this.page.url = ouicodegis.com;  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = ouicodegis; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-        };
-        (function () { // DON'T EDIT BELOW THIS LINE
-            var d = document, s = d.createElement('script');
-            s.src = 'https://ouicodegis.disqus.com/embed.js';
-            s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
-        })();
-    </script>
 
 
-    <script src="https://platform.twitter.com/widgets.js" type="text/javascript"></script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<script>
 
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+
+    var disqus_config = function () {
+        this.page.url = ouicodegis.com;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = ouicodegis; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    (function () { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://ouicodegis.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+</script>
+
+
+<script src="https://platform.twitter.com/widgets.js" type="text/javascript"></script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endblock %}
