--- a/templates/base.html
+++ b/templates/base.html
@@ -13,14 +13,14 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css" integrity="sha256-rnmbX+ZXZml9xbNUKt/qXfgpCi6zLJX7qqR+7vX/1ZY="
-        crossorigin="anonymous" />
-    
-    <link href="{% static 'css/stylish-portfolio.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link href="{% static 'css/simple-line-icons.css' %}" rel="stylesheet">
+    <link href="{% static 'css/stylish-portfolio.min.css' %}" rel="stylesheet">
+
+
 
     <title>{% block title %} OuiCodeGIS {% endblock %}</title>
+
 </head>
 
 <body>
@@ -28,9 +28,10 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
+            <a class="navbar-brand" href="{% url 'home' %}">OuiCodeGIS</a>
 
-            <a class="navbar-brand" href="{% url 'home' %}">Paulo Pimenta</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" 
+                aria-controls="navbarNavAltMarkup"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -39,38 +40,18 @@
                 <div class="navbar-nav ml-auto">
                     <!-- Resume and Blog-->
                     <a class="nav-item nav-link" href="{% static 'paulo_pimenta_cv_resume.pdf' %}">Resume</a>
+                    <a class="nav-item nav-link" href="{% static 'paulo_pimenta_cv_resume.pdf' %}">About me</a>
+
                     {% block nav-item %} {% endblock %}
-                    <!-- Twitter-->
-                    <a class="nav-item nav-link">
-                        <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/paulofpimenta">
-                            <span class="fa fa-twitter"></span>
-                        </a>
-                    </a>
-                    <!-- Linkedin-->
-                    <a class="nav-item nav-link">
-                        <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/paulo-pimenta">
-                            <span class="fa fa-linkedin"></span>
-                        </a>
-                    </a>
-                    <!-- Github-->
-                    <a class="nav-item nav-link">
-                        <a class="btn btn-social-icon btn-github" href="https://github.com/paulofpimenta">
-                            <span class="fa fa-github"></span>
-                        </a>
-                    </a>
-                    <!-- Slack-->
-                    <a class="nav-item nav-link">
-                        <a class="btn btn-social-icon btn-slack" href="https://paulopimenta.slack.com">
-                            <span class="fa fa-slack"></span>
-                        </a>
-                    </a>
                 </div>
             </div>
         </div>
     </nav>
 
     <!-- Page Content -->
-    {% block content %} {% endblock %}
+    {% block content %} 
+    
+    {% endblock %}
 
 
     <!-- Footer-->
@@ -88,7 +69,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a class="social-link rounded-circle text-white" href="#">
+              <a class="social-link rounded-circle text-white mr-3" href="#">
                 <i class="icon-social-github"></i>
               </a>
             </li>
@@ -102,11 +83,15 @@
         ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script id="dsq-count-scr" src="//ouicodegis.disqus.com/count.js" async></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>    
+    
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" 
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    
     <svg xmlns="http://www.w3.org/2000/svg" width="208" height="225" viewBox="0 0 208 225" preserveAspectRatio="none" style="display: none; visibility: hidden; position: absolute; top: -100%; left: -100%;">
         <defs>
             <style type="text/css"></style>
